--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>首页</title>
+<title>首页1</title>
 <style type="text/css">
 link {
     background-color: #000000;
