--- a/index.html
+++ b/index.html
@@ -7,23 +7,34 @@
 </head>
 
 <body>
+	<div id="Navigation">
+  <table width="200" border="1">
+    <tbody>
+	      <tr>
+	        <th width="190" scope="row"><p>个人信息</p></th>
+          </tr>
+	      <tr>
+	        <th scope="row"><p>规划记录</p></th>
+          </tr>
+	      <tr>
+	        <th scope="row"><p>会员充值</p></th>
+          </tr>
+	      <tr>
+	        <th scope="row"><p>账号退出</p></th>
+          </tr>
+        </tbody>
+  </table>
+</div>
 <div class="top">
-  <div id="toptitle">文化印记，云游有道</div>
-  <div></div>
-<img src="images/右侧导航栏.png" alt="" width="41" height="40" id="RightNavigation"/>
+	<div id="toptitle">文化印记，云游有道</div>
+	<img src="images/右侧导航栏.png" alt="" width="57" height="56" id="RightNavigation"/>
 </div>
-<div id="Navigation">
-  <li>个人信息</li>
-  <li>规划记录</li>
-  <li>会员充值</li>
-  <li>账号退出</li>
-</div>
-<img src="images/首页上方图片.png" width="310" height="310" alt="" class="recommendation"/>
+<a href="files/推荐景点.html"><img src="images/首页上方图片.png" width="604" height="355" alt="" class="recommendation"/></a>
 <div id="tutorial">
-  <p> <a href="files/新手教程.html"><img src="images/新手教程.png" width="54" height="56" alt=""/>新手教程</a></p>
+  <p><a href="files/新手教程.html"><img src="images/新手教程.png" width="60" height="60" alt=""/>新手教程</a></p>
 </div>
-<p><img src="images/交流展示.png" alt="" width="201" height="314" id="DisPlay"/><img src="images/文化印记.png" alt="" width="199" height="147" id="Cultural"/><img src="images/特色文创.png" alt="" width="193" height="153" id="Culproducts"/>
+<p><a href="files/交流展示.html"><img src="images/交流展示.png" alt="" width="302" height="471" id="DisPlay"/></a><a href="files/文化印记.html"><img src="images/文化印记.png" alt="" width="302" height="223" id="Cultural"/></a><a href="files/特色文创.html"><img src="images/特色文创.png" alt="" width="302" height="239" id="Culproducts"/></a>
 </p>
-<p><img src="images/即刻出发.png" alt="" width="173" height="118" id="goto"/><img src="images/订阅服务.png" alt="" width="168" height="115" id="subscription"/></p>
+<p><a href="files/即刻出发.html"><img src="images/即刻出发.png" alt="" width="302" height="207" id="goto"/></a><a href="files/订阅服务.html"><img src="images/订阅服务.png" alt="" width="302" height="207" id="subscription"/></a></p>
 </body>
 </html>
