--- a/index.html
+++ b/index.html
@@ -33,8 +33,23 @@
 <div id="tutorial">
   <p><a href="files/新手教程.html"><img src="images/新手教程.png" width="60" height="60" alt=""/>新手教程</a></p>
 </div>
-<p><a href="files/交流展示.html"><img src="images/交流展示.png" alt="" width="302" height="471" id="DisPlay"/></a><a href="files/文化印记.html"><img src="images/文化印记.png" alt="" width="302" height="223" id="Cultural"/></a><a href="files/特色文创.html"><img src="images/特色文创.png" alt="" width="302" height="239" id="Culproducts"/></a>
-</p>
-<p><a href="files/即刻出发.html"><img src="images/即刻出发.png" alt="" width="302" height="207" id="goto"/></a><a href="files/订阅服务.html"><img src="images/订阅服务.png" alt="" width="302" height="207" id="subscription"/></a></p>
+<div class="imgbox">
+	<div class="halfleft"><a href="files/交流展示.html"><img src="images/交流展示.png" alt="" width="97" height="156" class="img"/></a></div>
+	<div class="halfright">
+	<a href="files/文化印记.html"><img src="images/文化印记.png" alt="" width="302" height="228" class="img"/></a>
+	</div>
+	<div class="halfright">
+	<a href="files/特色文创.html"><img src="images/特色文创.png" alt="" width="302" height="252" class="img"/></a>
+	</div>
+</div>
+<br />
+<div class="imgbox">
+	<div class="halfleft">
+		<a href="files/即刻出发.html"><img src="images/即刻出发.png" alt="" width="302" height="201" class="img"/></a>
+	</div>
+	<div class="halfright">
+		<a href="files/订阅服务.html"><img src="images/订阅服务.png" alt="" width="90%" height="115" class="img"/></a>
+	</div>
+</div>
 </body>
 </html>
